8-final-project/senior_ai_api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-api-svc
  namespace: default
spec:
  type: ClusterIP
  selector: { app: ai-api }
  ports: [{ port: 80, targetPort: 8000 }]
